@@ -2,6 +2,7 @@ Revision history for Perl extension Module::Plan::Base
 
 0.07 Wed  3 Jan 2007
 	- Essential CPAN::Inject version bump
+	- Fixed local file handling on MSWin32
 
 0.06 Wed  3 Jan 2007
 	- Fixed a minor bug in the --install handling
